@@ -102,6 +102,7 @@ com.vividsolutions.wms.WMService.WMS-IO-Error = Could not connect to the WMS.\n\
 	{0}\: {1}
 com.vividsolutions.wms.WMService.WMS-Not-Found = The WMS was not found.\n\
 	Request was\: {0}
+com.vididsolutions.wms.WMService.Other-GetMap-URL-Found = The WMS advertises the URL {0} as GetMap-URL. Do you want to use it?
 coordsys.ChangeCoordinateSystemPlugIn.coordinate-system-for-task = Projektin koordinaattij\u00E4rjestelm\u00E4\:
 coordsys.CoordinateSystem.unspecified = M\u00E4\u00E4rittelem\u00E4t\u00F6n
 datasource.DataSourceQueryChooserDialog.card = Kortti\:
