@@ -102,6 +102,7 @@ com.vividsolutions.wms.WMService.WMS-IO-Error = Could not connect to the WMS.\n\
 	{0}\: {1}
 com.vividsolutions.wms.WMService.WMS-Not-Found = The WMS was not found.\n\
 	Request was\: {0}
+com.vididsolutions.wms.WMService.Other-GetMap-URL-Found = The WMS advertises the URL {0} as GetMap-URL. Do you want to use it?
 coordsys.ChangeCoordinateSystemPlugIn.coordinate-system-for-task = Syst\u00E8me de coordonn\u00E9es pour la t\u00E2che\:
 coordsys.CoordinateSystem.unspecified = Inconnu
 datasource.DataSourceQueryChooserDialog.card = Card
