@@ -97,6 +97,7 @@ com.vividsolutions.wms.ui.WMSViewer.wms-url = http\://slkapps2.env.gov.bc.ca/ser
 com.vividsolutions.wms.ui.WMSViewer.wms-viewer = Visualizzatore WMS
 com.vividsolutions.wms.ui.WMSViewer.zoom-in = Zoom in
 com.vividsolutions.wms.ui.WMSViewer.zoom-out = Zoom out
+com.vididsolutions.wms.WMService.Other-GetMap-URL-Found = The WMS advertises the URL {0} as GetMap-URL. Do you want to use it?
 coordsys.ChangeCoordinateSystemPlugIn.coordinate-system-for-task = Sistema di riferimento del progetto\:
 coordsys.CoordinateSystem.unspecified = Non definito
 datasource.DataSourceQueryChooserDialog.card = Carta
