@@ -1,3 +1,11 @@
+2008-01-23 Andreas Schmitz <schmitz@lat-lon.de>
+      src/com/vividsolutions/wms/WMService.java,
+      src/com/vividsolutions/wms/MapRequest.java,
+      src/com/vividsolutions/wms/Capabilities.java,
+      src/com/vividsolutions/wms/Parser.java,
+      src/com/vividsolutions/jump/workbench/ui/plugin/wms/URLWizardPanel.java:
+      Added usage of WMS 1.1.1 capabilities' GetMap URLs.
+
 2007-12-19 Andreas Schmitz <schmitz@lat-lon.de>
       translations:
       Added the enable check factory, fixing an item on Jukka's list.
